WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118356
[Curl] Download does not replace existing file.
https://bugs.webkit.org/show_bug.cgi?id=118356
Summary
[Curl] Download does not replace existing file.
peavo
Reported
2013-07-03 06:09:49 PDT
If the download target file already exists, it is not replaced after the download has finished. At this point, the user would have already approved to replace the file, so it should be replaced.
Attachments
Patch
(1.67 KB, patch)
2013-07-03 06:19 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-07-03 06:19:32 PDT
Created
attachment 205997
[details]
Patch
Peter Gal
Comment 2
2013-07-15 01:30:16 PDT
Well I'm not a reviewer but this looks good to me. I've just got one (two) question(s) if the MoveFileEx fails then the old file will be still there? and if so won't that cause problems?
peavo
Comment 3
2013-07-15 10:26:56 PDT
(In reply to
comment #2
)
> Well I'm not a reviewer but this looks good to me. > > I've just got one (two) question(s) if the MoveFileEx fails then the old file will be still there? and if so won't that cause problems?
Thanks for commenting :) I think this scenario should be ok, as the old file is a temporary file in a Windows temp folder. The next download will generate a new, unique, temporary file name, to download to, and not have any references to the previous temporary file.
Brent Fulgham
Comment 4
2013-07-15 10:59:57 PDT
Comment on
attachment 205997
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2013-07-15 11:22:21 PDT
Comment on
attachment 205997
[details]
Patch Clearing flags on attachment: 205997 Committed
r152649
: <
http://trac.webkit.org/changeset/152649
>
WebKit Commit Bot
Comment 6
2013-07-15 11:22:23 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 7
2013-07-15 11:27:30 PDT
(In reply to
comment #4
)
> (From update of
attachment 205997
[details]
) > r=me
Thanks for reviewing!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug