[Curl] Download does not replace existing file. https://bugs.webkit.org/show_bug.cgi?id=118356

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-07-15
Reviewed by Brent Fulgham.

If the download target file already exists, it is not replaced after the download has finished.
At this point, the user would have already approved to replace the file, so it should be replaced.

* platform/network/curl/CurlDownload.cpp:
(CurlDownload::moveFileToDestination): Move file and replace it if it already exists.
If the new file is on a different volume, do a copy/delete operation.

Canonical link: https://commits.webkit.org/136573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152649 268f45cc-cd09-0410-ab3c-d52691b4dbfc